--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -102,6 +102,8 @@ android {
         ndk {
             abiFilters "armeabi-v7a", "x86"
         }
+        manifestPlaceholders = [onesignal_app_id: "1681e4cf-3f82-4bc1-88c9-d5052bd97d7c",
+                                onesignal_google_project_number: "227268636138"]
     }
     splits {
         abi {
@@ -133,6 +135,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-onesignal')
     compile project(':react-native-get-sms-android')
     compile project(':react-native-vector-icons')
     compile fileTree(dir: "libs", include: ["*.jar"])
