--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 	"dependencies": {
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.48.4",
+		"react-native-animatable": "^1.2.4",
+		"react-native-collapsible": "^0.9.0",
 		"react-native-get-sms-android": "^1.3.2",
 		"react-native-material-bottom-navigation": "^0.5.2",
 		"react-native-material-cards": "^1.0.6",
+		"react-native-onesignal": "^3.0.6",
 		"react-native-vector-icons": "^4.4.0",
 		"react-navigation": "^1.0.0-beta.13"
 	},
